--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sky-glyde",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -9,7 +10,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
     "lucide-react": "^0.294.0"
   },
   "devDependencies": {
